# SPx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SPx.spec  notebook.ipynb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
data/samples/: 6B_NIR_DRIFT_1.CSV  ELu_Bulk_1.CSV
notebooks/: processing.ipynb  processing.py  unmixing.ipynb  unmixing.py
src/: choices.py  config.py  constants.py  gui.py
src/base/: main.py  predict.py
