[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SPx"
version = "1"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pysptools>=0.15.0",
    "scipy==1.13.1",
    "scipy-stubs>=1.15.3.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
env = [
    "dotenv>=0.9.9",
]
dev = [
    "dotenv>=0.9.9",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
desktop = [
    "pyinstaller>=6.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0",
]

[project.scripts]
spx-gui = "src.gui:run"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ['C', 'E', 'F', 'W', 'B', 'I']
ignore = ['E203', 'E501', 'F841', 'C901']

[tool.ruff.lint.isort]
force-single-line = true
